# BaseDjangoSystem

./: .gitignore  README.md  pyproject.toml
Dependencies/: Pipfile
Docs/: api.md  archive.md  backend.md  bless.txt  code.md  fortend.md  index.md  issues.md  ops.md  plan.md  refs.md  requirement.md
System/: gunicorn.py  gunicorn_standby.py  manage.py  nginx-test.conf  nginx.conf  supervisor.ini  supervisor_standby.ini  test.py
System/Common/: __init__.py
System/Common/admin/: __init__.py  base.py  user.py
System/Common/libs/: __init__.py  choices.py  time.py
System/Common/management/: __init__.py
System/Common/management/commands/: create_user.py  init_data.py
System/Common/models/: __init__.py  base.py  regions.py  user.py
System/Common/serializers/: __init__.py  token.py  user.py
System/Common/serializers/base/: __init__.py  regions.py  user.py
System/Common/static/css/: index.css
System/Common/templates/: base.html
System/Common/templates/frame/: bootstrap4.html  bootstrap5.html  element-plus.html  layui-vue.html  layui.html  vue2.html  vue3.html
System/Common/templates/plugs/: axios.html  bootstrap-table-scripts.html  bootstrap-table-styles.html  echarts-5.html  font-awesome-4.7.0.html  font-awesome-5.15.4.html  font-awesome-6.html  jquery.html  layui-vue-scripts.html  layui-vue-styles.html  select2-3-scripts.html  select2-3-styles.html  select2-4-scripts.html  select2-4-styles.html  vue2.html  vue3.html
System/Common/utils/: __init__.py  command.py  decorator.py  jinja2_env.py  middlewares.py  pagination.py  time.py
System/Common/utils/algorithm_handler/: __init__.py
System/Common/utils/auth/: __init__.py  authentication.py  backends.py  verification.py
System/Common/viewModels/: __init__.py  base.py  cache.py  choices.py
System/Common/views/: __init__.py  index.py
System/Config/: __init__.py  asgi.py  db_router.py  urls.py  wsgi.py
System/Config/settings/: __init__.py  base.py  develop.py  product.py  project.py  project_dev.py  test.py
(+64 files in other folders)
